@@ -84,8 +84,10 @@ AC_CHECK_LIB(Xpm, main, , , $X_LIBS)
 AC_CHECK_LIB([Xaw3d], XawInitializeWidgetSet,,
    AC_ERROR([Unable to find a valid Xaw3d library. Please install it and rerun configure.]),
    $X_LIBS)
-### This does not work on Mac OS X
-# AC_CHECK_MEMBER(SimplePart.international,,[AC_MSG_ERROR([Xaw3d misses internationalisation support])],[#include <X11/Xaw3d/SimpleP.h>])
+myCPPFLAGS="$CPPFLAGS"
+CPPFLAGS="$CPPFLAGS $X_CFLAGS"
+AC_CHECK_MEMBER(SimplePart.international,,[AC_MSG_ERROR([Xaw3d misses internationalisation support])],[#include <X11/Xaw3d/SimpleP.h>])
+CPPFLAGS="$myCPPFLAGS"
 AC_CHECK_LIB(Xinerama, main, , , $X_LIBS)
 
 opt_mkstemp=false
